# EmulatorBoy

./: .gitignore  AUTHORS  CMakeLists.txt  README.md
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
include/: EmulatorBoy.hpp  Exceptions.hpp  Instruction.hpp  Intel8080Instructions.hpp  Intel8080Processor.hpp  Predefs.hpp  Processor.hpp  Registers.hpp
src/: CMakeLists.txt  EmulatorBoy.cpp  Intel8080Instructions.cpp  Intel8080Processor.cpp
test/: CMakeLists.txt  Intel8080InstructionTests.cpp
